# yaprogen

./: .gitignore  CHANGELOG.rst  HACKING.rst  MANIFEST.in  README.rst  disthelpers.py  setup.py
data/notices/: Apache-2.0  BSD-2-Clause.txt  BSD-3-Clause.txt  GPL-2.0+.txt  MIT+Apache-2.0.txt
data/templates/autotools-app/: manifest.json
data/templates/autotools-c-app/: manifest.json
data/templates/autotools-c-lib/: manifest.json
data/templates/autotools-glib-lib/: manifest.json
data/templates/autotools-lib/: manifest.json
data/templates/autotools-vala-app/: manifest.json
data/templates/buildroot-autotools/: manifest.json
data/templates/buildroot-ext/: manifest.json
data/templates/buildroot-generic/: manifest.json
data/templates/cmake-app/: manifest.json
data/templates/cmake-c-app/: manifest.json
data/templates/cmake-c-lib/: manifest.json
data/templates/cmake-lib/: manifest.json
data/templates/glib-lib/: manifest.json
data/templates/meson-c-lib/skeleton/: .editorconfig  meson.build.mustache  meson_options.txt
data/templates/meson-c-lib/skeleton/doc/: meson.build.mustache  xyz.doxygen.in.mustache
data/templates/meson-c-lib/skeleton/man/: meson.build.mustache
data/templates/meson-c-lib/skeleton/tools/: meson.build.mustache
data/templates/meson-c-lib/skeleton/xyz/: meson.build.mustache  xyz-api.h.mustache
extra/: nonreg
man/: yaprogen.1.rst  yaprogen.conf.5.rst  yaprogentut.7.rst
po/: POTFILES.in  fr.po
shell-completion/zsh/: _yaprogen
yaprogen/: __init__.py  cli.py  common.py  generator.py  licensing.py  template.py
(+273 files in other folders)
